Project

General

Profile

Actions

Bug #7627

closed

Instance variables of a Struct object are marshaled even when marshal_dump method is defined.

Bug #7627: Instance variables of a Struct object are marshaled even when marshal_dump method is defined.

Added by KL-7 (Kirill Lashuk) over 13 years ago. Updated over 13 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.0.0dev (2012-11-01 trunk 37411) [x86_64-darwin12.2.0]
Backport:
[ruby-core:51163]

Description

=begin
If (({marshal_dump})) method is defined in a class and you pass an instance of that class into (({Marshal.dump})), instead of dumping instance variables (as it happens by default, when (({marshal_dump})) is not defined) Ruby dumps only data returned from this method.

Though, if the class is a (({Struct})), MRI 1.8.7 behaves the same way as for a regular class, but both MRI 1.9.3 and MRI 2.0.0 in addition to the data returned from (({marshal_dump})) method automatically dump instance variables of the object.

Code example:

marshal.rb

class A
attr_accessor :foo

def marshal_dump; 'dump'; end # fake dump data
def marshal_load(*); end # do nothing
end

class B < Struct.new(:bar)
attr_accessor :foo

def marshal_dump; 'dump'; end # fake dump data
def marshal_load(*); end # do nothing
end

def test(obj)
obj.foo = 12

dump = Marshal.dump(obj)
loaded = Marshal.load(dump)

p obj, dump, loaded, loaded.foo
puts
end

test(A.new)
test(B.new)

MRI 1.8.7 (instance variable of the Struct object ((is not dumped))):

$ ruby-1.8.7-p371 marshal.rb
#<A:0x10ff5e0a0 @foo=12>
"\004\bU:\006A"\tdump"
#<A:0x10ff5df38>
nil

#
"\004\bIU:\006B"\tdump\000"
#
nil

MRI 1.9.3 (instance variable of the Struct object ((is dumped))):

$ ruby-1.9.3-p327 marshal.rb
#<A:0x007ff79d80e6b0 @foo=12>
"\x04\bU:\x06AI"\tdump\x06:\x06EF"
#<A:0x007ff79d80e5c0>
nil

#
"\x04\bIU:\x06BI"\tdump\x06:\x06EF\x06:\t@fooi\x11"
#
12

MRI 2.0.0-preview1 (instance variable of the Struct object ((is dumped))):

$ ruby-2.0.0-preview1 marshal.rb
#<A:0x007fb46908bf68 @foo=12>
"\x04\bU:\x06AI"\tdump\x06:\x06EF"
#<A:0x007fb46908be00>
nil

#
"\x04\bIU:\x06BI"\tdump\x06:\x06EF\x06:\t@fooi\x11"
#
12

I'm not sure if it's expected behavior, but it doesn't look like one to me. Probably, it has something to do with the implementation of (({has_ivars})) macro that for some reason is used ((<here|URL:https://github.com/ruby/ruby/blob/trunk/marshal.c#L661>)) while dumping an object with defined (({marshal_dump})) method, but I might be wrong, because I didn't manage to track down the problem further.

=end

Updated by ko1 (Koichi Sasada) over 13 years ago Actions #1 [ruby-core:51652]

I'm not sure about this issue, but is it high-priority trunk issue?
or not important issue?

Updated by nobu (Nobuyoshi Nakada) over 13 years ago Actions #2

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r38952.
Kirill, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


marshal.c: marshal_dump instance varialbes

  • marshal.c (w_object): dump instance varialbes of the result of
    marshal_dump not the original object. [ruby-core:51163] [Bug #7627]
  • complex.c (nucomp_marshal_dump): need to copy instance variables.
  • rational.c (nurat_marshal_dump): ditto.
Actions

Also available in: PDF Atom