complex.c
@@ -1324,6 +1324,7 @@ nucomp_marshal_dump(VALUE self)
     get_dat1(self);
 
     a = rb_assoc_new(dat->real, dat->imag);
+    rb_copy_generic_ivar(a, self);
     return a;
 }
 
